[gd_scene load_steps=2 format=3 uid="uid://bj5j3nkm3dder"]

[ext_resource type="Script" uid="uid://qo874miun2vn" path="res://src/scenes/tab_menu.gd" id="1_6htx6"]

[node name="TabMenu" type="Control"]
layout_mode = 3
anchor_right = 0.2
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6htx6")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.22265625, 0.22265625, 0.22265625, 0.44705883)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.057000004
anchor_top = 0.09900001
anchor_right = 0.94200003
anchor_bottom = 0.96500003

[node name="IpContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Ip" type="Label" parent="VBoxContainer/IpContainer"]
layout_mode = 2
text = "IP: "

[node name="IpEdit" type="LineEdit" parent="VBoxContainer/IpContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
placeholder_text = "127.0.0.1"

[node name="PlcContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="PLC" type="Label" parent="VBoxContainer/PlcContainer"]
layout_mode = 2
text = "Plc connected:"

[node name="Status" type="Label" parent="VBoxContainer/PlcContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "False"

[node name="ConnectButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Connect"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Empty" type="Label" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(0, 35)
layout_mode = 2

[node name="HBoxContainer4" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="CurFpsLabel" type="Label" parent="VBoxContainer/HBoxContainer4"]
custom_minimum_size = Vector2(0, 35)
layout_mode = 2
text = "Fps: "

[node name="CurFps" type="Label" parent="VBoxContainer/HBoxContainer4"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 35)
layout_mode = 2
text = "144"

[node name="HBoxContainer3" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="VsyncLabel" type="Label" parent="VBoxContainer/HBoxContainer3"]
custom_minimum_size = Vector2(0, 35)
layout_mode = 2
text = "Vsync: "

[node name="VsyncButton" type="CheckButton" parent="VBoxContainer/HBoxContainer3"]
layout_mode = 2
button_pressed = true

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="FpsLabel" type="Label" parent="VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(0, 35)
layout_mode = 2
text = "Target fps: "

[node name="FpsEdit" type="LineEdit" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "60"
max_length = 4

[connection signal="text_submitted" from="VBoxContainer/IpContainer/IpEdit" to="." method="_on_ip_edit_text_submitted"]
[connection signal="pressed" from="VBoxContainer/ConnectButton" to="." method="_on_connect_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer3/VsyncButton" to="." method="_on_vsync_button_pressed"]
[connection signal="text_submitted" from="VBoxContainer/HBoxContainer2/FpsEdit" to="." method="_on_fps_edit_text_submitted"]
